--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h2>請掃描 NFC 標籤...</h2>
   <p id="status">等待中...</p>
+  <button onclick="readNFC()">開始掃描 NFC</button>
 
   <script>
     async function readNFC() {
@@ -21,7 +22,7 @@
             const id = textDecoder.decode(record.data);
 
             // 替換為你的 Google 表單連結 + entry ID
-            const formUrl = "https://docs.google.com/forms/d/e/iXm2c9xB2kfW16uXA/formResponse?entry.680740836=" + encodeURIComponent(id);
+            const formUrl = "https://docs.google.com/forms/d/e/iXm2c9xB2kfW16uXA/formResponse?entry.123456789=" + encodeURIComponent(id);
 
             document.getElementById("status").textContent = "讀取成功，跳轉中...";
             window.location.href = formUrl;
@@ -33,8 +34,6 @@
         document.getElementById("status").textContent = "這台裝置不支援 Web NFC。請使用 Android Chrome。";
       }
     }
-
-    readNFC();
   </script>
 </body>
 </html>
