--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h2>請掃描 NFC 標籤...</h2>
   <p id="status">等待中...</p>
- // <button onclick="readNFC()">開始掃描 NFC</button>
+  <!-- <button onclick="readNFC()">開始掃描 NFC</button> -->
 
   <script>
     async function readNFC() {
