--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             document.getElementById("status").textContent = "讀取成功，跳轉中...";
             
             // 替換為你的 Google 表單連結 + entry ID
-            const formUrl = "https://docs.google.com/forms/d/e/iXm2c9xB2kfW16uXA/formResponse?entry.680740836=" + encodeURIComponent(id);
+            const formUrl = "https://docs.google.com/forms/d/e/iXm2c9xB2kfW16uXA/formResponse?entry.680740836_sentinel=" + encodeURIComponent(id);
+                             
             window.location.href = formUrl;
           };
         } catch (error) {
