--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             document.getElementById("status").textContent = "讀取成功，跳轉中...";
             
             // 替換為你的 Google 表單連結 + entry ID
-            const formUrl = https://docs.google.com/forms/d/e/1FAIpQLSdKsWLR_cKG67z7wAmF80Igz9muqyX6F8JHqB_E6JAwG4C6PQ/formResponse?entry.2015421160=" + encodeURIComponent(id);
+            const formUrl = "https://docs.google.com/forms/d/e/1FAIpQLSdKsWLR_cKG67z7wAmF80Igz9muqyX6F8JHqB_E6JAwG4C6PQ/formResponse?entry.2015421160=" + encodeURIComponent(id);
                              
             window.location.href = formUrl;
           };
