--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             const id = String.fromCharCode.apply(null, uint8Array);
             console.log("解析出的 NFC ID:", id);
 
+            alert(id + "\n" + encodeURIComponent(id));
+
             // 顯示讀取的 ID
             document.getElementById("status").textContent = "讀取成功，跳轉中...";
             
