--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             const id = String.fromCharCode.apply(null, uint8Array);
             console.log("解析出的 NFC ID:", id);
 
-            alert(record + "\n" + encodeURIComponent(record));
+            alert(record.data + "\n" + encodeURIComponent(record.data));
 
             // 顯示讀取的 ID
             document.getElementById("status").textContent = "讀取成功，跳轉中...";
