--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             const uint8Array = new Uint8Array(record.data);
             const id = String.fromCharCode.apply(null, uint8Array);
             console.log("解析出的 NFC ID:", id);
-
+            alert("顯示");
             alert(record.data + "\n" + encodeURIComponent(record.data));
 
             // 顯示讀取的 ID
