--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             const record = event.message.records[0];
             const uint8Array = new Uint8Array(record.data);
             const id = String.fromCharCode.apply(null, uint8Array);
-            alert("NFC ID:\n" + id + "\n" + encodeURIComponent(id));
+            alert("TEST");
+            alert(id + "\n" + record.data);
 
             document.getElementById("status").textContent = "讀取成功，跳轉中...";
             const formUrl = "https://docs.google.com/forms/d/e/1FAIpQLSdKsWLR_cKG67z7wAmF80Igz9muqyX6F8JHqB_E6JAwG4C6PQ/formResponse?entry.2015421160=" + encodeURIComponent(id);
